fix(sms): contrast color

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -7,7 +7,7 @@ h1 {
 .poweredBy {
   width: 100%;
   text-align: center;
-  color: #a3a3a3;
+  color: #108108;
   margin: 0 0 1.5em 0;
 }
 
